--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,18 +1,134 @@
 version: 2.1
 orbs:
-  architect: giantswarm/architect@4.8.1
+  architect: giantswarm/architect@4.9.0
 
 workflows:
   package-and-push-chart-on-tag:
     jobs:
       - architect/push-to-app-catalog:
           context: "architect"
-          # executor: "app-build-suite" # uncomment this if you want automatic metadata generation and helm chart linting
-          name: "package and push {APP-NAME} chart"
+          name: playground-catalog
           app_catalog: "giantswarm-playground-catalog"
           app_catalog_test: "giantswarm-playground-test-catalog"
-          chart: "{APP-NAME}"
+          chart: "vertical-pod-autoscaler-crd"
           # Trigger job on git tag.
           filters:
+            tags:
+              only: /^v.*/
+
+      - architect/push-to-app-catalog:
+          context: "architect"
+          name: control-plane-catalog
+          app_catalog: "control-plane-catalog"
+          app_catalog_test: "control-plane-test-catalog"
+          chart: "vertical-pod-autoscaler-crd"
+          # Trigger job on git tag.
+          filters:
+            tags:
+              only: /^v.*/
+
+      - architect/push-to-app-catalog:
+          name: "package and push vertical-pod-autoscaler-crd chart"
+          app_catalog: "default-catalog"
+          app_catalog_test: "default-test-catalog"
+          chart: "vertical-pod-autoscaler-crd"
+          # Trigger job on git tag.
+          filters:
+            tags:
+              only: /^v.*/
+
+      - architect/push-to-app-collection:
+          context: architect
+          name: shared-app-collection
+          app_catalog: "control-plane-catalog"
+          app_name: "vertical-pod-autoscaler-crd"
+          app_namespace: "giantswarm"
+          app_collection_repo: "shared-app-collection"
+          disable_force_upgrade: true
+          requires:
+            - control-plane-catalog
+          filters:
+            branches:
+              ignore: /.*/
+            tags:
+              only: /^v.*/
+
+      - architect/push-to-app-collection:
+          context: architect
+          name: aws-app-collection
+          app_catalog: "control-plane-catalog"
+          app_name: "vertical-pod-autoscaler-crd"
+          app_namespace: "giantswarm"
+          app_collection_repo: "aws-app-collection"
+          disable_force_upgrade: true
+          requires:
+            - control-plane-catalog
+          filters:
+            branches:
+              ignore: /.*/
+            tags:
+              only: /^v.*/
+
+      - architect/push-to-app-collection:
+          context: architect
+          name: azure-app-collection
+          app_catalog: "control-plane-catalog"
+          app_name: "vertical-pod-autoscaler-crd"
+          app_namespace: "giantswarm"
+          app_collection_repo: "azure-app-collection"
+          disable_force_upgrade: true
+          requires:
+            - control-plane-catalog
+          filters:
+            branches:
+              ignore: /.*/
+            tags:
+              only: /^v.*/
+
+      - architect/push-to-app-collection:
+          context: architect
+          name: kvm-app-collection
+          app_catalog: "control-plane-catalog"
+          app_name: "vertical-pod-autoscaler-crd"
+          app_namespace: "giantswarm"
+          app_collection_repo: "kvm-app-collection"
+          disable_force_upgrade: true
+          requires:
+            - control-plane-catalog
+          filters:
+            branches:
+              ignore: /.*/
+            tags:
+              only: /^v.*/
+
+      - architect/push-to-app-collection:
+          context: architect
+          name: openstack-app-collection
+          app_catalog: "control-plane-catalog"
+          app_name: "vertical-pod-autoscaler-crd"
+          app_namespace: "giantswarm"
+          app_collection_repo: "openstack-app-collection"
+          disable_force_upgrade: true
+          requires:
+            - control-plane-catalog
+          filters:
+            branches:
+              ignore: /.*/
+            tags:
+              only: /^v.*/
+
+      - architect/push-to-app-collection:
+          context: architect
+          name: vmware-app-collection
+          app_catalog: "control-plane-catalog"
+          app_name: "vertical-pod-autoscaler-crd"
+          app_namespace: "giantswarm"
+          app_collection_repo: "vmware-app-collection"
+          disable_force_upgrade: true
+          requires:
+            - control-plane-catalog
+          filters:
+            branches:
+              ignore: /.*/
             tags:
               only: /^v.*/
