--- a/helm/vertical-pod-autoscaler-crd/Chart.yaml
+++ b/helm/vertical-pod-autoscaler-crd/Chart.yaml
@@ -11,3 +11,5 @@ annotations:
   version: fb2ccec4228c26e366bd1ac96aade056f3db0151
   application.giantswarm.io/team: "atlas"
   config.giantswarm.io/version: 1.x.x
+restrictions:
+  clusterSingleton: true
