--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,7 @@ workflows:
     jobs:
       - architect/push-to-app-catalog:
           context: architect
+          executor: app-build-suite
           name: playground-catalog
           app_catalog: giantswarm-playground-catalog
           app_catalog_test: giantswarm-playground-test-catalog
@@ -18,6 +19,7 @@ workflows:
 
       - architect/push-to-app-catalog:
           context: architect
+          executor: app-build-suite
           name: control-plane-catalog
           app_catalog: control-plane-catalog
           app_catalog_test: control-plane-test-catalog
@@ -29,6 +31,7 @@ workflows:
 
       - architect/push-to-app-catalog:
           context: architect
+          executor: app-build-suite
           name: default-catalog
           app_catalog: default-catalog
           app_catalog_test: default-test-catalog
