--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -123,11 +123,11 @@ workflows:
 
       - architect/push-to-app-collection:
           context: architect
-          name: vmware-app-collection
+          name: vsphere-app-collection
           app_catalog: control-plane-catalog
           app_name: vertical-pod-autoscaler-crd
           app_namespace: giantswarm
-          app_collection_repo: vmware-app-collection
+          app_collection_repo: vsphere-app-collection
           disable_force_upgrade: true
           requires:
             - control-plane-catalog
