--- a/.abs/main.yaml
+++ b/.abs/main.yaml
@@ -2,3 +2,4 @@ replace-chart-version-with-git: true
 generate-metadata: true
 chart-dir: ./helm/{APP-NAME}
 destination: ./build
+disable-giantswarm-helm-validator: true
