--- a/helm/vertical-pod-autoscaler-crd/Chart.yaml
+++ b/helm/vertical-pod-autoscaler-crd/Chart.yaml
@@ -2,6 +2,7 @@ apiVersion: v2
 appVersion: 0.9.2
 name: vertical-pod-autoscaler-crd
 description: Vertical Pod Autoscaler CustomResourceDefinitions.
+icon: https://s.giantswarm.io/app-icons/k8s-initiator/1/dark.svg
 home: https://github.com/giantswarm/vertical-pod-autoscaler-crd
 sources:
 - https://github.com/kubernetes/autoscaler
