resolve linting errors

--- a/helm/vertical-pod-autoscaler-crd/Chart.yaml
+++ b/helm/vertical-pod-autoscaler-crd/Chart.yaml
@@ -6,7 +6,7 @@ icon: https://s.giantswarm.io/app-icons/k8s-initiator/1/dark.svg
 home: https://github.com/giantswarm/vertical-pod-autoscaler-crd
 sources:
 - https://github.com/kubernetes/autoscaler
-version: 3.0.0
+version: [[ .Version ]]
 annotations:
   repository: https://github.com/FairwindsOps/charts/tree/master/stable/vpa
   version: fb2ccec4228c26e366bd1ac96aade056f3db0151
