--- a/helm/vertical-pod-autoscaler-crd/Chart.yaml
+++ b/helm/vertical-pod-autoscaler-crd/Chart.yaml
@@ -10,7 +10,7 @@ version: [[ .Version ]]
 annotations:
   repository: https://github.com/FairwindsOps/charts/tree/master/stable/vpa
   version: fb2ccec4228c26e366bd1ac96aade056f3db0151
-  application.giantswarm.io/team: "atlas"
+  application.giantswarm.io/team: "turtles"
   config.giantswarm.io/version: 1.x.x
 restrictions:
   clusterSingleton: true
