--- a/helm/vertical-pod-autoscaler-crd/Chart.yaml
+++ b/helm/vertical-pod-autoscaler-crd/Chart.yaml
@@ -1,16 +1,12 @@
 apiVersion: v2
-appVersion: 1.1.0
 name: vertical-pod-autoscaler-crd
-description: Vertical Pod Autoscaler CustomResourceDefinitions.
-icon: https://s.giantswarm.io/app-icons/k8s-initiator/1/dark.svg
-home: https://github.com/giantswarm/vertical-pod-autoscaler-crd
-sources:
-- https://github.com/kubernetes/autoscaler
+description: A Helm chart for the Vertical Pod Autoscaler CRDs.
 version: [[ .Version ]]
+appVersion: 1.2.1
+home: https://github.com/giantswarm/vertical-pod-autoscaler-crd
+icon: https://s.giantswarm.io/app-icons/k8s-initiator/1/dark.svg
 annotations:
-  repository: https://github.com/FairwindsOps/charts/tree/master/stable/vpa
-  version: fb2ccec4228c26e366bd1ac96aade056f3db0151
-  application.giantswarm.io/team: "turtles"
-  config.giantswarm.io/version: 1.x.x
+  application.giantswarm.io/team: turtles
+  ui.giantswarm.io/logo: https://s.giantswarm.io/app-icons/k8s-initiator/1/dark.svg
 restrictions:
   clusterSingleton: true
