--- a/helm/vertical-pod-autoscaler-crd/Chart.yaml
+++ b/helm/vertical-pod-autoscaler-crd/Chart.yaml
@@ -1,7 +1,7 @@
 apiVersion: v2
 name: vertical-pod-autoscaler-crd
 description: A Helm chart for the Vertical Pod Autoscaler CRDs.
-version: [[ .Version ]]
+version: 3.1.0
 appVersion: 1.2.1
 home: https://github.com/giantswarm/vertical-pod-autoscaler-crd
 icon: https://s.giantswarm.io/app-icons/k8s-initiator/1/dark.svg
