--- a/helm/vertical-pod-autoscaler-crd/templates/verticalpodautoscalers.yaml
+++ b/helm/vertical-pod-autoscaler-crd/templates/verticalpodautoscalers.yaml
@@ -244,6 +244,7 @@ spec:
                     - "Off"
                     - Initial
                     - Recreate
+                    - InPlaceOrRecreate
                     - Auto
                     type: string
                 type: object
